--- a/siva-parent/siva-webapp/src/main/resources/messages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 #default spring boot messages
 
-validation.error.message.document.malformed = document malformed or not matching documentType
-validation.service.error.message = unfortunately there was an error validating your document
+validation.error.message.document.malformed = Document malformed or not matching documentType
+validation.service.error.message = Unfortunately there was an error validating your document
