--- a/validation-services-parent/xroad-validation-service/src/main/resources/messages.properties
+++ b/validation-services-parent/xroad-validation-service/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
 #default spring boot messages
 
-error.document.malformed = document malformed or not matching documentType
+error.document.malformed = Document malformed or not matching documentType
