[SIVARIA2-27] ASICS validation

--- a/siva-parent/siva-webapp/src/main/resources/messages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 #default spring boot messages
 
 validation.error.message.document.malformed = Document malformed or not matching documentType
+validation.error.message.document.requirements = Document does not meet the requirements
 validation.service.error.message = Unfortunately there was an error validating your document
