--- a/siva-parent/siva-webapp/src/test/resources/messages.properties
+++ b/siva-parent/siva-webapp/src/test/resources/messages.properties
@@ -2,4 +2,5 @@
 
 validation.error.message.document.malformed = Document malformed or not matching documentType
 validation.error.message.document.requirements = Document does not meet the requirements
+validation.error.message.signatureFile.malformed = Signature file malformed
 validation.service.error.message = Unfortunately there was an error validating your document
